# GOOGLE-SORTING-EMAILS

./: README.md  pyproject.toml
src/: __main__.py  config.py
