[tool.poetry]
name = "googlesortingemails"
version = "0.1.0"
description = "Mail sorting."
authors = ["salko-ua <chips69jamil69game@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google = "^3.0.0"
google-api-python-client = "^2.119.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
